--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap" rel="stylesheet">
     <title>UNI!</title>
 </head>
 
@@ -18,12 +21,15 @@
         </ul>
     </header>
 
-
-    <div class="container">
-        <h1>UNI!</h1>
-        <p></p>
-        <button class="saiba_mais">Saiba mais</button>
-    </div>
+    <main class="inicio">
+        <div class="container">
+            <!-- <h1>UNI!</h1> -->
+            <img src="UNI!.png" alt="UNI!" class="uni">
+            <p>Um grupo de estudantes se ajudando a se tornarem os melhores estudantes que podemos ser
+                junte-se ao UNIHELP! e faça parte da comunidade de apoio total na hora dos estudos </p>
+            <button class="saiba_mais">SAIBA MAIS</button>
+        </div>
+    </main>
 </body>
 
 </html>
