3 paginas quase finalizadas

--- a/home.html
+++ b/home.html
@@ -8,11 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./img/UNI!.png" type="image/x-icon">
-    <link rel="import" href="quemsomos.html">
-    <link rel="import" href="validarhoras.html">
-    <link rel="import" href="comovalidar.html">
-
+    <link rel="shortcut icon" href="./img/" type="image/x-icon">
+    <link rel="import" href="unitalk.html">
     <title>UNI!</title>
 </head>
 
@@ -59,6 +56,7 @@
             </div>
         </div>
     </main>
+
     <main id="cumprir">
         <div class="validarhoras">
             <h1 class="title">POR QUE VOCÊ DEVE CUMPRIR SUAS HORAS?</h1>
@@ -72,17 +70,11 @@
                     permanecendo essencialmente inalterada. Foi popularizado na década de 1960 com o lançamento de
                     folhas Letraset contendo passagens de Lorem Ipsum e, mais recentemente, com software de editoração
                     eletrônica como Aldus PageMaker, incluindo versões de Lorem Ipsum.
-                    Lorem Ipsum é simplesmente um texto fictício da indústria de impressão e composição tipográfica.
-                    Lorem Ipsum tem sido o texto fictício padrão da indústria desde 1500, quando um impressor
-                    desconhecido pegou uma prova de tipos e a misturou para fazer um livro de espécimes de tipos. Ela
-                    sobreviveu não apenas a cinco séculos, mas também ao salto para a composição tipográfica eletrônica,
-                    permanecendo essencialmente inalterada. Foi popularizado na década de 1960 com o lançamento de
-                    folhas Letraset contendo passagens de Lorem Ipsum e, mais recentemente, com software de editoração
-                    eletrônica como Aldus PageMaker, incluindo versões de Lorem Ipsum
                 </p>
             </div>
         </div>
     </main>
+
     <main id="validar">
         <h1 class="title3">COMO VOCÊ DEVE VALIDAR SUAS HORAS?</h1>
         <img src="./img/binoculo.png" alt="binoculo" class="binoculo">
@@ -105,12 +97,13 @@
             </p>
         </div>
     </main>
+
     <main id="unitalk">
         <div class="chat">
             <img src="./img/UNITALK!.png" alt="UNITALK" class="unitalk">
-            <p>
+            <p >
                 DICAS DE SITES E DICAS DE ESTUDANTES <br>
-                ESTUDANTE PARA ESTUDANTE
+                <a href="unitalk.html" class="dicas">ESTUDANTE PARA ESTUDANTE</a>
             </p>
         </div>
     </main>
