faltam botoes e links

--- a/home.html
+++ b/home.html
@@ -39,20 +39,15 @@
             <img src="./img/Ellipse 1.png" alt="bola" class="ellipse">
             <img src="./img/FISH.png" alt="fish" class="fish">
             <div class="texto">
-                <p>Lorem Ipsum é simplesmente um texto fictício da indústria de impressão e composição tipográfica.
-                    Lorem Ipsum tem sido o texto fictício padrão da indústria desde 1500, quando um impressor
-                    desconhecido pegou uma prova de tipos e a misturou para fazer um livro de espécimes de tipos. Ela
-                    sobreviveu não apenas a cinco séculos, mas também ao salto para a composição tipográfica eletrônica,
-                    permanecendo essencialmente inalterada. Foi popularizado na década de 1960 com o lançamento de
-                    folhas Letraset contendo passagens de Lorem Ipsum e, mais recentemente, com software de editoração
-                    eletrônica como Aldus PageMaker, incluindo versões de Lorem Ipsum.
-                    Lorem Ipsum é simplesmente um texto fictício da indústria de impressão e composição tipográfica.
-                    Lorem Ipsum tem sido o texto fictício padrão da indústria desde 1500, quando um impressor
-                    desconhecido pegou uma prova de tipos e a misturou para fazer um livro de espécimes de tipos. Ela
-                    sobreviveu não apenas a cinco séculos, mas também ao salto para a composição tipográfica eletrônica,
-                    permanecendo essencialmente inalterada. Foi popularizado na década de 1960 com o lançamento de
-                    folhas Letraset contendo passagens de Lorem Ipsum e, mais recentemente, com software de editoração
-                    eletrônica como Aldus PageMaker, incluindo versões de Lorem Ipsum.</p>
+                <p>A UNI, é uma plataforma sem fins lucrativos para os estudantes que buscam auxílio ao tentar validar
+                    suas horas dentro do portal Ulife.
+                    Com uma interface intuitiva, os alunos podem aprender a registrar suas horas de forma eficiente,
+                    garantindo credibilidade acadêmica e facilitando o cumprimento dos requisitos do curso. Este portal
+                    representa uma solução eficaz para a gestão e validação das horas complementares, contribuindo para
+                    a trajetória educacional dos alunos com praticidade e transparência.
+                    Possibilitamos aos estudantes assistência em como validar as horas, bem como, indicações de
+                    plataformas confiáveis de palestras e cursos que o estudante pode acessar para conseguir gerar
+                    certificados finais para regularizar as horas.</p>
             </div>
         </div>
     </main>
@@ -63,50 +58,33 @@
             <img src="./img/time.png" alt="time" class="time">
             <div class="texto2">
                 <p>
-                    Lorem Ipsum é simplesmente um texto fictício da indústria de impressão e composição tipográfica.
-                    Lorem Ipsum tem sido o texto fictício padrão da indústria desde 1500, quando um impressor
-                    desconhecido pegou uma prova de tipos e a misturou para fazer um livro de espécimes de tipos. Ela
-                    sobreviveu não apenas a cinco séculos, mas também ao salto para a composição tipográfica eletrônica,
-                    permanecendo essencialmente inalterada. Foi popularizado na década de 1960 com o lançamento de
-                    folhas Letraset contendo passagens de Lorem Ipsum e, mais recentemente, com software de editoração
-                    eletrônica como Aldus PageMaker, incluindo versões de Lorem Ipsum.
+                    A validação das horas complementares na faculdade é crucial, pois atesta o cumprimento dos
+                    requisitos acadêmicos estabelecidos pelo curso. Ela evidencia o engajamento do estudante em
+                    atividades extracurriculares pertinentes à sua formação, conferindo-lhe credibilidade e
+                    enriquecimento no currículo. Ademais, tais registros podem ser requisitos indispensáveis para a
+                    conclusão do curso e desempenham um papel relevante na valorização do graduando no mercado de
+                    trabalho.
                 </p>
             </div>
         </div>
     </main>
 
     <main id="validar">
-        <h1 class="title3">COMO VOCÊ DEVE VALIDAR SUAS HORAS?</h1>
+        <h1 class="title3">COMO VALIDAR SUAS <a href="unihelp.html" class="link">HORAS NO ULIFE?</a></h1>
         <img src="./img/binoculo.png" alt="binoculo" class="binoculo">
         <div class="texto3">
-            <p>
-                Lorem Ipsum é simplesmente um texto fictício da indústria de impressão e composição tipográfica.
-                Lorem Ipsum tem sido o texto fictício padrão da indústria desde 1500, quando um impressor
-                desconhecido pegou uma prova de tipos e a misturou para fazer um livro de espécimes de tipos. Ela
-                sobreviveu não apenas a cinco séculos, mas também ao salto para a composição tipográfica eletrônica,
-                permanecendo essencialmente inalterada. Foi popularizado na década de 1960 com o lançamento de
-                folhas Letraset contendo passagens de Lorem Ipsum e, mais recentemente, com software de editoração
-                eletrônica como Aldus PageMaker, incluindo versões de Lorem Ipsum.
-                Lorem Ipsum é simplesmente um texto fictício da indústria de impressão e composição tipográfica.
-                Lorem Ipsum tem sido o texto fictício padrão da indústria desde 1500, quando um impressor
-                desconhecido pegou uma prova de tipos e a misturou para fazer um livro de espécimes de tipos. Ela
-                sobreviveu não apenas a cinco séculos, mas também ao salto para a composição tipográfica eletrônica,
-                permanecendo essencialmente inalterada. Foi popularizado na década de 1960 com o lançamento de
-                folhas Letraset contendo passagens de Lorem Ipsum e, mais recentemente, com software de editoração
-                eletrônica como Aldus PageMaker, incluindo versões de Lorem Ipsum
-            </p>
+                <img src="img/seta.png" alt="seta" class="seta" onclick="uni()">
         </div>
     </main>
 
     <main id="unitalk">
         <div class="chat">
             <img src="./img/UNITALK!.png" alt="UNITALK" class="unitalk">
-            <p >
+            <p>
                 DICAS DE SITES E DICAS DE ESTUDANTES <br>
                 <a href="unitalk.html" class="dicas">ESTUDANTE PARA ESTUDANTE</a>
             </p>
         </div>
     </main>
 </body>
-
 </html>
