--- a/unihelp.html
+++ b/unihelp.html
@@ -41,9 +41,30 @@
                 <li>2- ACESSE “OUTROS SERVIÇOS”</li>
                 <li>3- EM “SERVIÇOS”</li>
                 <li>4- SELECIONE “SOLICITAÇÕES ON- <br> LINE”</li>
-                <li>5- EM TIPO DE SOLICITAÇÃO, ENCONTRE  <br> “ENTREGA DE ATIVIDADES COMPLEMENTARES <br>  - ALUNO ATIVO”</li>
+                <li>5- EM TIPO DE SOLICITAÇÃO, ENCONTRE <br> “ENTREGA DE ATIVIDADES COMPLEMENTARES <br> - ALUNO ATIVO”
+                </li>
             </ul>
+            <img src="img/Retangulo.png" alt="Retangulo" class="retangulo">
         </div>
+    </main>
+    <main id="fotos">
+        <div class="lulu">
+            <img src="img/ulife2.png" alt="ulife2" class="ulife1">
+            <img src="img/ulife1.png" alt="ulife1" class="ulife2">
+        </div>
+    </main>
+    <img src="img/Rectangle 5.png" alt="horizonte" class="horizonte">
+    <main id="fim">
+        <div class="ler">
+            <img src="img/ulife3.png" alt="ulife3" class="ulife3">
+        </div>
+        <img src="img/cone1.png" alt="cone1" class="cone1">
+        <img src="img/cone2.png" alt="cone2" class="cone2">
+        <img src="img/confirma.png" alt="confirma" class="confirma">
+            <p class="text6">
+                LEIA ATENTAMENTE O PROTOCOLO, NELE HAVERÁ INFORMAÇÕES DE COMO DESCREVER SUA SOLICITAÇÃO, ASSIM COMO
+                QUAIS ATIVIDADES SÃO VALIDADAS
+            </p>
     </main>
 </body>
 
