--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="home.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./img/" type="image/x-icon">
     <link rel="import" href="unitalk.html">
@@ -27,9 +28,9 @@
     <main id="inicio">
         <div class="inicial">
             <img src="./img/UNI!.png" alt="UNI!" class="uni">
-            <p>Um grupo de estudantes se ajudando a se tornarem os melhores estudantes que podemos ser
+            <p class="texto4">Um grupo de estudantes se ajudando a se tornarem os melhores estudantes que podemos ser
                 junte-se ao UNIHELP! e faça parte da comunidade de apoio total na hora dos estudos </p>
-            <button class="saiba_mais" onclick="">SAIBA MAIS</button>
+            <a id="saiba_mais" href="#aboutUS">SAIBA MAIS</a>
         </div>
     </main>
 
@@ -73,18 +74,23 @@
         <h1 class="title3">COMO VALIDAR SUAS <a href="unihelp.html" class="link">HORAS NO ULIFE?</a></h1>
         <img src="./img/binoculo.png" alt="binoculo" class="binoculo">
         <div class="texto3">
+            <a href="unihelp.html">
                 <img src="img/seta.png" alt="seta" class="seta" onclick="uni()">
+            </a>
         </div>
     </main>
 
     <main id="unitalk">
         <div class="chat">
-            <img src="./img/UNITALK!.png" alt="UNITALK" class="unitalk">
+            <a href="unitalk.html">
+                <img src="./img/UNITALK!.png" alt="UNITALK" class="unitalk">
+            </a>
             <p>
                 DICAS DE SITES E DICAS DE ESTUDANTES <br>
-                <a href="unitalk.html" class="dicas">ESTUDANTE PARA ESTUDANTE</a>
+            <p class="dicas">ESTUDANTE PARA ESTUDANTE</p>
             </p>
         </div>
     </main>
 </body>
+
 </html>
