--- a/unihelp.html
+++ b/unihelp.html
@@ -24,7 +24,7 @@
         <div class="ajudar">
             <img src="./img/unihelp.png" alt="UNIHELP!" class="unihelp">
         </div>
-        <button class="validar">COMO VALIDAR AS HORAS NO ULIFE?</button>
+        <a class="validar" href="#danca">COMO VALIDAR AS HORAS NO ULIFE?</a>
     </main>
 
     <main id="danca">
