--- a/unitalk.html
+++ b/unitalk.html
@@ -53,6 +53,49 @@
     <main id="sites">
         <div class="ajuda">
             <h1 class="lista">LISTA DE SITES QUE PODEM TE AJUDAR</h1>
+            <ul class="alinhamento">
+                <li class="ajuste">
+                    <a class="links" href="https://avamec.mec.gov.br/#/">Ava Mec</a>
+                    <a class="links"
+                        href="https://ead.senar.org.br/matriculas-abertas?utm_source=google&utm_medium=cpc&utm_campaign=ga-conversao-matriculas-abertas&utm_source=google&utm_medium=cpc&utm_campaign=DOT-SENARNA_matriculas-abertas&gad_source=1&gclid=Cj0KCQjwgJyyBhCGARIsAK8LVLPqY2YjX3LMwitw41xSuKkxbTttLmPkvHeyK3Crgb9DL8xiZL6JGLsaAnVVEALw_wcB ">Senar</a>
+                    <a class="links" href="https://www.ev.org.br/ ">Fundação Bradesco</a>
+                    <a class="links"
+                        href="https://digital.sestsenat.org.br/cursos?gad_source=1&gclid=Cj0KCQjwgJyyBhCGARIsAK8LVLMEpNx8vSwIdIqUcp_L2l3B95w0m6TUyp3kP2OCoHcQhyAOwLvvFYEaAicBEALw_wcB ">SEST
+                        SENAT</a>
+                    <a class="links" href="https://audienciasonline.com.br/#/home">Audiências Online</a>
+                    <a class="links" href="https://online.pucrs.br/formacao-gratuita">PUCRS Online</a>
+                    <a class="links" href="https://educacao-executiva.fgv.br/Cursos/Gratuitos">FGV</a>
+                    <a class="links" href="https://palestras.online/#/home">Palestras Online</a>
+                    <a class="links" href="https://cadastro.escoladotrabalhador40.com.br/">Escola do Trabalhador</a>
+                </li>
+            </ul>
+            <ul class="alinhamento">
+                <li class="ajuste">
+                    <a class="links2" href="https://www.unasus.gov.br/">Una SUS</a>
+                    <a class="links2" href="https://www.escolavirtual.gov.br/">Escola Virtual do Governo</a>
+                    <a class="links2" href="https://saberes.senado.leg.br/">Saberes - Senado</a>
+                    <a class="links2" href="https://www.cnj.jus.br/eadcnj/course/index.php?categoryid=119">CNJ</a>
+                    <a class="links2" href="https://veduca.org/">Veduca</a>
+                    <a class="links2" href="https://esa.oab.org.br/home/ver-cursos?filter_categories_id%5B%5D=24">ESA
+                        OAB</a>
+                    <a class="links2" href="https://enap.gov.br/pt/">Enap</a>
+                    <a class="links2" href="https://mundi.ifsul.edu.br/portal/">IFSUL Mundi</a>
+                </li>
+            </ul>
+            <!-- <ul class="alinhamento">
+                <li class="ajuste">
+                    <a class="link3" href="https://www.pensarcursos.com.br/cursos">Pensar Cursos</a>
+                    <a class="link3" href="https://cursoseducaweb.com.br/">Cursos EducaWeb</a>
+                    <a class="link3" href="https://www.realizzarecursos.com.br/">Realizzare</a>
+                    <a class="link3" href="https://cursa.app/pt">CURSA</a>
+                    <a class="link3" href="https://www.coursera.org/courses?query=free">COURSERA</a>
+                    <a class="link3" href="https://kultivi.com/sobre-a-kultivi">KULTIVI</a>
+                    <a class="link3" href="https://grow.google/intl/pt/courses-and-tools/">Cursos Online do Google</a>
+                    <a class="link3" href="https://cursos.iadb.org/en?lang=en">BID</a>
+                    <a class="link3"
+                        href="https://cursos.intelbras.com.br/portal/layout/927/intelbras/home.asp?V29ya3NwYWNlSUQ9MTI1MCZrdF9kaWRheGlzPXRvcA#/home">iTEC</a>
+                </li>
+            </ul> -->
         </div>
     </main>
 </body>
